# pluginlib_calculator

./: CMakeLists.txt  README.md  calculator_plugins.xml  package.xml
include/pluginlib_calculator/: calculator_base.h  calculator_plugins.h
src/: calculator_loader.cpp  calculator_plugins.cpp
